# control_custo

./: .dockerignore  .env.example  .gitignore  .http  Dockerfile  GEMINI.md  README.md  docker-compose.yml  nginx.conf  otel-collector-config.yaml  plan.md  prometheus.yml  pyproject.toml  realm-export.json  wait_for_keycloak.py
docs/logs/: build(deps)-add-uv.lock-file.md  build(deps)-migrate-from-poetry-to-hatch-uv-in-pyproject.toml.md  build(deps)-remove-poetry.lock.md  build(deps)-update-dockerignore-to-exclude-virtualenv-and-cache-directories.md  build(docker)-migrate-from-poetry-to-uv-in-Dockerfile.md  chore(docker)-improve-healthchecks-and-increase-api-cpu-limit.md  docs(gemini)-add-gemini-instructions-file.md  docs(logs)-add-log-files-for-gemini-changes.md  docs(plan)-add-main-rule-for-creating-new-branches.md  docs(plan)-move-plan.md-to-docs-directory.md  docs(process)-document-git-recovery-and-commit-strategy.md  feat(logging)-configure-file-and-console-logging-in-main.py.md  fix(otel)-replace-deprecated-logging-exporter-with-debug-exporter.md  fix(otel)-replace-deprecated-logging-exporter.md  log.md  refactor(api)-update-imports-add-validation-and-error-handling-in-login-endpoint.md  refactor(auth)-update-TokenDTO-to-TokenResponse-with-error-handling-fields.md  refactor(structure)-remove-unnecessary-init.py-from-adapters-db-directory.md  refactor(structure)-remove-unnecessary-init.py-from-adapters-directory.md  refactor(structure)-remove-unnecessary-init.py-from-adapters-web-directory.md  refactor(structure)-remove-unnecessary-init.py-from-application-directory.md  refactor(structure)-remove-unnecessary-init.py-from-domain-directory.md  test(http)-update-auth-token-and-enable-token-endpoint-request.md
src/control_custo/: main.py
src/control_custo/adapters/auth/: keycloak.py
src/control_custo/adapters/db/: repository.py
src/control_custo/adapters/web/: api.py
src/control_custo/application/: ports.py  services.py
src/control_custo/domain/: models.py
